kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.rails-oauth-example.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.rails-oauth-example.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.rails-oauth-example.network/example-network: "true"
        io.rails-oauth-example.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: root
            - name: POSTGRES_USER
              value: root
          image: postgres:14
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/
              name: db-data
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
status: {}
