kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.rails-oauth-example.service: db
  name: db
spec:
  type: NodePort
  ports:
    - name: "5433"
      port: 5433
      targetPort: 5432
      nodePort: 30040
  selector:
    io.rails-oauth-example.service: db
