kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.rails-oauth-example.service: web
  name: web
spec:
  type: NodePort
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
      nodePort: 30050
  selector:
    io.rails-oauth-example.service: web
